# wishlist

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
lista/: admin.py  models.py  serializers.py  views.py
lista/migrations/: 0001_initial.py  0002_listamodel_imagem.py  0003_alter_listamodel_id.py
lista/test/: tests_lista.py
setup/: settings.py  urls.py
